TypedLama/regression/compile_error/test004.1.lama
-- check that logical value should be TConst
if A(1)
then "lol"
else "kek"
fi